refactor(bryce-boot):重构分页结果对象的创建方式
- 修改了多个模块中分页查询方法的实现
-优化了 PageResult 对象的创建方式，使用新的构造方法
- 统一了空结果集的处理，使用 PageResult.empty() 方法
- 调整了参数顺序，先传入 list 再传入 total